Proj1/WORKSV3/y.output
State 47 conflicts: 2 shift/reduce
State 113 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier getID SEMI

    7 $@1: /* empty */

    8 $@2: /* empty */

    9 var_declaration: type_specifier ID $@1 LSQ NUM $@2 RSQ SEMI

   10 type_specifier: INT
   11               | VOID

   12 @3: /* empty */

   13 fun_declaration: type_specifier getID LPAREN @3 params RPAREN compound_stmt

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: type_specifier ID

   19 $@4: /* empty */

   20 param: type_specifier ID $@4 LSQ RSQ

   21 compound_stmt: LCURLY local_declarations statement_list RCURLY

   22 local_declarations: /* empty */
   23                   | local_declarations var_declaration

   24 statement_list: /* empty */
   25               | statement_list statement

   26 statement: expression_stmt
   27          | compound_stmt
   28          | selection_stmt
   29          | iteration_stmt
   30          | return_stmt

   31 expression_stmt: expression SEMI
   32                | SEMI

   33 selection_stmt: IF LPAREN expression RPAREN statement
   34               | IF LPAREN expression RPAREN statement ELSE statement

   35 iteration_stmt: WHILE LPAREN expression RPAREN statement

   36 return_stmt: ID SEMI
   37            | ID expression SEMI
   38            | RETURN ERROR
   39            | RETURN expression ERROR
   40            | RETURN SEMI
   41            | RETURN expression SEMI

   42 expression: var ASSIGN expression
   43           | simple_expression

   44 var: getID

   45 $@5: /* empty */

   46 var: ID $@5 LSQ expression RSQ

   47 simple_expression: additive_expression LT additive_expression
   48                  | additive_expression LTEQ additive_expression
   49                  | additive_expression GT additive_expression
   50                  | additive_expression GTEQ additive_expression
   51                  | additive_expression EQ additive_expression
   52                  | additive_expression NEQ additive_expression
   53                  | additive_expression

   54 additive_expression: additive_expression PLUS term
   55                    | additive_expression MINUS term
   56                    | term

   57 term: term TIMES factor
   58     | term OVER factor
   59     | factor

   60 factor: LPAREN expression RPAREN
   61       | var
   62       | call
   63       | getNUM

   64 $@6: /* empty */

   65 call: ID $@6 LPAREN args RPAREN

   66 args: /* empty */
   67     | arg_list

   68 arg_list: arg_list COMMA expression
   69         | expression

   70 getNUM: NUM

   71 getID: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 33 34
ELSE (259) 34
INT (260) 10
RETURN (261) 38 39 40 41
VOID (262) 11 15
WHILE (263) 35
ASSIGN (264) 42
EQ (265) 51
LT (266) 47
LTEQ (267) 48
GT (268) 49
GTEQ (269) 50
NEQ (270) 52
PLUS (271) 54
MINUS (272) 55
TIMES (273) 57
OVER (274) 58
LPAREN (275) 13 33 34 35 60 65
RPAREN (276) 13 33 34 35 60 65
LSQ (277) 9 20 46
RSQ (278) 9 20 46
LCURLY (279) 21
RCURLY (280) 21
COMMA (281) 16 68
SEMI (282) 6 9 31 32 36 37 40 41
ID (283) 9 18 20 36 37 46 65 71
NUM (284) 9 70
ERROR (285) 38 39


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declaration_list (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4 5, on right: 2 3
var_declaration (35)
    on left: 6 9, on right: 4 23
$@1 (36)
    on left: 7, on right: 9
$@2 (37)
    on left: 8, on right: 9
type_specifier (38)
    on left: 10 11, on right: 6 9 13 18 20
fun_declaration (39)
    on left: 13, on right: 5
@3 (40)
    on left: 12, on right: 13
params (41)
    on left: 14 15, on right: 13
param_list (42)
    on left: 16 17, on right: 14 16
param (43)
    on left: 18 20, on right: 16 17
$@4 (44)
    on left: 19, on right: 20
compound_stmt (45)
    on left: 21, on right: 13 27
local_declarations (46)
    on left: 22 23, on right: 21 23
statement_list (47)
    on left: 24 25, on right: 21 25
statement (48)
    on left: 26 27 28 29 30, on right: 25 33 34 35
expression_stmt (49)
    on left: 31 32, on right: 26
selection_stmt (50)
    on left: 33 34, on right: 28
iteration_stmt (51)
    on left: 35, on right: 29
return_stmt (52)
    on left: 36 37 38 39 40 41, on right: 30
expression (53)
    on left: 42 43, on right: 31 33 34 35 37 39 41 42 46 60 68 69
var (54)
    on left: 44 46, on right: 42 61
$@5 (55)
    on left: 45, on right: 46
simple_expression (56)
    on left: 47 48 49 50 51 52 53, on right: 43
additive_expression (57)
    on left: 54 55 56, on right: 47 48 49 50 51 52 53 54 55
term (58)
    on left: 57 58 59, on right: 54 55 56 57 58
factor (59)
    on left: 60 61 62 63, on right: 57 58 59
call (60)
    on left: 65, on right: 62
$@6 (61)
    on left: 64, on right: 65
args (62)
    on left: 66 67, on right: 65
arg_list (63)
    on left: 68 69, on right: 67 68
getNUM (64)
    on left: 70, on right: 63
getID (65)
    on left: 71, on right: 6 13 44


state 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


state 1

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


state 2

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 9


state 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


state 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 7

    6 var_declaration: type_specifier . getID SEMI
    9                | type_specifier . ID $@1 LSQ NUM $@2 RSQ SEMI
   13 fun_declaration: type_specifier . getID LPAREN @3 params RPAREN compound_stmt

    ID  shift, and go to state 11

    getID  go to state 12


state 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 9

    0 $accept: program $end .

    $default  accept


state 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 11

    9 var_declaration: type_specifier ID . $@1 LSQ NUM $@2 RSQ SEMI
   71 getID: ID .

    LSQ       reduce using rule 7 ($@1)
    $default  reduce using rule 71 (getID)

    $@1  go to state 13


state 12

    6 var_declaration: type_specifier getID . SEMI
   13 fun_declaration: type_specifier getID . LPAREN @3 params RPAREN compound_stmt

    LPAREN  shift, and go to state 14
    SEMI    shift, and go to state 15


state 13

    9 var_declaration: type_specifier ID $@1 . LSQ NUM $@2 RSQ SEMI

    LSQ  shift, and go to state 16


state 14

   13 fun_declaration: type_specifier getID LPAREN . @3 params RPAREN compound_stmt

    $default  reduce using rule 12 (@3)

    @3  go to state 17


state 15

    6 var_declaration: type_specifier getID SEMI .

    $default  reduce using rule 6 (var_declaration)


state 16

    9 var_declaration: type_specifier ID $@1 LSQ . NUM $@2 RSQ SEMI

    NUM  shift, and go to state 18


state 17

   13 fun_declaration: type_specifier getID LPAREN @3 . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 19

    type_specifier  go to state 20
    params          go to state 21
    param_list      go to state 22
    param           go to state 23


state 18

    9 var_declaration: type_specifier ID $@1 LSQ NUM . $@2 RSQ SEMI

    $default  reduce using rule 8 ($@2)

    $@2  go to state 24


state 19

   11 type_specifier: VOID .
   15 params: VOID .

    RPAREN    reduce using rule 15 (params)
    $default  reduce using rule 11 (type_specifier)


state 20

   18 param: type_specifier . ID
   20      | type_specifier . ID $@4 LSQ RSQ

    ID  shift, and go to state 25


state 21

   13 fun_declaration: type_specifier getID LPAREN @3 params . RPAREN compound_stmt

    RPAREN  shift, and go to state 26


state 22

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 14 (params)


state 23

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


state 24

    9 var_declaration: type_specifier ID $@1 LSQ NUM $@2 . RSQ SEMI

    RSQ  shift, and go to state 28


state 25

   18 param: type_specifier ID .
   20      | type_specifier ID . $@4 LSQ RSQ

    LSQ       reduce using rule 19 ($@4)
    $default  reduce using rule 18 (param)

    $@4  go to state 29


state 26

   13 fun_declaration: type_specifier getID LPAREN @3 params RPAREN . compound_stmt

    LCURLY  shift, and go to state 30

    compound_stmt  go to state 31


state 27

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 20
    param           go to state 32


state 28

    9 var_declaration: type_specifier ID $@1 LSQ NUM $@2 RSQ . SEMI

    SEMI  shift, and go to state 33


state 29

   20 param: type_specifier ID $@4 . LSQ RSQ

    LSQ  shift, and go to state 34


state 30

   21 compound_stmt: LCURLY . local_declarations statement_list RCURLY

    $default  reduce using rule 22 (local_declarations)

    local_declarations  go to state 35


state 31

   13 fun_declaration: type_specifier getID LPAREN @3 params RPAREN compound_stmt .

    $default  reduce using rule 13 (fun_declaration)


state 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


state 33

    9 var_declaration: type_specifier ID $@1 LSQ NUM $@2 RSQ SEMI .

    $default  reduce using rule 9 (var_declaration)


state 34

   20 param: type_specifier ID $@4 LSQ . RSQ

    RSQ  shift, and go to state 36


state 35

   21 compound_stmt: LCURLY local_declarations . statement_list RCURLY
   23 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 24 (statement_list)

    var_declaration  go to state 37
    type_specifier   go to state 38
    statement_list   go to state 39


state 36

   20 param: type_specifier ID $@4 LSQ RSQ .

    $default  reduce using rule 20 (param)


state 37

   23 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 23 (local_declarations)


state 38

    6 var_declaration: type_specifier . getID SEMI
    9                | type_specifier . ID $@1 LSQ NUM $@2 RSQ SEMI

    ID  shift, and go to state 11

    getID  go to state 40


state 39

   21 compound_stmt: LCURLY local_declarations statement_list . RCURLY
   25 statement_list: statement_list . statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30
    RCURLY  shift, and go to state 45
    SEMI    shift, and go to state 46
    ID      shift, and go to state 47
    NUM     shift, and go to state 48

    compound_stmt        go to state 49
    statement            go to state 50
    expression_stmt      go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 40

    6 var_declaration: type_specifier getID . SEMI

    SEMI  shift, and go to state 15


state 41

   33 selection_stmt: IF . LPAREN expression RPAREN statement
   34               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 64


state 42

   38 return_stmt: RETURN . ERROR
   39            | RETURN . expression ERROR
   40            | RETURN . SEMI
   41            | RETURN . expression SEMI

    LPAREN  shift, and go to state 44
    SEMI    shift, and go to state 65
    ID      shift, and go to state 66
    NUM     shift, and go to state 48
    ERROR   shift, and go to state 67

    expression           go to state 68
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 43

   35 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


state 44

   60 factor: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 70
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 45

   21 compound_stmt: LCURLY local_declarations statement_list RCURLY .

    $default  reduce using rule 21 (compound_stmt)


state 46

   32 expression_stmt: SEMI .

    $default  reduce using rule 32 (expression_stmt)


state 47

   36 return_stmt: ID . SEMI
   37            | ID . expression SEMI
   46 var: ID . $@5 LSQ expression RSQ
   65 call: ID . $@6 LPAREN args RPAREN
   71 getID: ID .

    LPAREN  shift, and go to state 44
    SEMI    shift, and go to state 71
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    LPAREN    [reduce using rule 64 ($@6)]
    LSQ       reduce using rule 45 ($@5)
    SEMI      [reduce using rule 71 (getID)]
    $default  reduce using rule 71 (getID)

    expression           go to state 72
    var                  go to state 56
    $@5                  go to state 73
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    $@6                  go to state 74
    getNUM               go to state 62
    getID                go to state 63


state 48

   70 getNUM: NUM .

    $default  reduce using rule 70 (getNUM)


state 49

   27 statement: compound_stmt .

    $default  reduce using rule 27 (statement)


state 50

   25 statement_list: statement_list statement .

    $default  reduce using rule 25 (statement_list)


state 51

   26 statement: expression_stmt .

    $default  reduce using rule 26 (statement)


state 52

   28 statement: selection_stmt .

    $default  reduce using rule 28 (statement)


state 53

   29 statement: iteration_stmt .

    $default  reduce using rule 29 (statement)


state 54

   30 statement: return_stmt .

    $default  reduce using rule 30 (statement)


state 55

   31 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 75


state 56

   42 expression: var . ASSIGN expression
   61 factor: var .

    ASSIGN  shift, and go to state 76

    $default  reduce using rule 61 (factor)


state 57

   43 expression: simple_expression .

    $default  reduce using rule 43 (expression)


state 58

   47 simple_expression: additive_expression . LT additive_expression
   48                  | additive_expression . LTEQ additive_expression
   49                  | additive_expression . GT additive_expression
   50                  | additive_expression . GTEQ additive_expression
   51                  | additive_expression . EQ additive_expression
   52                  | additive_expression . NEQ additive_expression
   53                  | additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    EQ     shift, and go to state 77
    LT     shift, and go to state 78
    LTEQ   shift, and go to state 79
    GT     shift, and go to state 80
    GTEQ   shift, and go to state 81
    NEQ    shift, and go to state 82
    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 53 (simple_expression)


state 59

   56 additive_expression: term .
   57 term: term . TIMES factor
   58     | term . OVER factor

    TIMES  shift, and go to state 85
    OVER   shift, and go to state 86

    $default  reduce using rule 56 (additive_expression)


state 60

   59 term: factor .

    $default  reduce using rule 59 (term)


state 61

   62 factor: call .

    $default  reduce using rule 62 (factor)


state 62

   63 factor: getNUM .

    $default  reduce using rule 63 (factor)


state 63

   44 var: getID .

    $default  reduce using rule 44 (var)


state 64

   33 selection_stmt: IF LPAREN . expression RPAREN statement
   34               | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 87
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 65

   40 return_stmt: RETURN SEMI .

    $default  reduce using rule 40 (return_stmt)


state 66

   46 var: ID . $@5 LSQ expression RSQ
   65 call: ID . $@6 LPAREN args RPAREN
   71 getID: ID .

    LPAREN    reduce using rule 64 ($@6)
    LSQ       reduce using rule 45 ($@5)
    $default  reduce using rule 71 (getID)

    $@5  go to state 73
    $@6  go to state 74


state 67

   38 return_stmt: RETURN ERROR .

    $default  reduce using rule 38 (return_stmt)


state 68

   39 return_stmt: RETURN expression . ERROR
   41            | RETURN expression . SEMI

    SEMI   shift, and go to state 88
    ERROR  shift, and go to state 89


state 69

   35 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 90
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 70

   60 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 91


state 71

   36 return_stmt: ID SEMI .

    $default  reduce using rule 36 (return_stmt)


state 72

   37 return_stmt: ID expression . SEMI

    SEMI  shift, and go to state 92


state 73

   46 var: ID $@5 . LSQ expression RSQ

    LSQ  shift, and go to state 93


state 74

   65 call: ID $@6 . LPAREN args RPAREN

    LPAREN  shift, and go to state 94


state 75

   31 expression_stmt: expression SEMI .

    $default  reduce using rule 31 (expression_stmt)


state 76

   42 expression: var ASSIGN . expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 95
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 77

   51 simple_expression: additive_expression EQ . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 97
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 78

   47 simple_expression: additive_expression LT . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 98
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 79

   48 simple_expression: additive_expression LTEQ . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 99
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 80

   49 simple_expression: additive_expression GT . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 100
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 81

   50 simple_expression: additive_expression GTEQ . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 101
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 82

   52 simple_expression: additive_expression NEQ . additive_expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var                  go to state 96
    additive_expression  go to state 102
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 83

   54 additive_expression: additive_expression PLUS . term

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var     go to state 96
    term    go to state 103
    factor  go to state 60
    call    go to state 61
    getNUM  go to state 62
    getID   go to state 63


state 84

   55 additive_expression: additive_expression MINUS . term

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var     go to state 96
    term    go to state 104
    factor  go to state 60
    call    go to state 61
    getNUM  go to state 62
    getID   go to state 63


state 85

   57 term: term TIMES . factor

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var     go to state 96
    factor  go to state 105
    call    go to state 61
    getNUM  go to state 62
    getID   go to state 63


state 86

   58 term: term OVER . factor

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    var     go to state 96
    factor  go to state 106
    call    go to state 61
    getNUM  go to state 62
    getID   go to state 63


state 87

   33 selection_stmt: IF LPAREN expression . RPAREN statement
   34               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 107


state 88

   41 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 41 (return_stmt)


state 89

   39 return_stmt: RETURN expression ERROR .

    $default  reduce using rule 39 (return_stmt)


state 90

   35 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 108


state 91

   60 factor: LPAREN expression RPAREN .

    $default  reduce using rule 60 (factor)


state 92

   37 return_stmt: ID expression SEMI .

    $default  reduce using rule 37 (return_stmt)


state 93

   46 var: ID $@5 LSQ . expression RSQ

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 109
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 94

   65 call: ID $@6 LPAREN . args RPAREN

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    $default  reduce using rule 66 (args)

    expression           go to state 110
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    args                 go to state 111
    arg_list             go to state 112
    getNUM               go to state 62
    getID                go to state 63


state 95

   42 expression: var ASSIGN expression .

    $default  reduce using rule 42 (expression)


state 96

   61 factor: var .

    $default  reduce using rule 61 (factor)


state 97

   51 simple_expression: additive_expression EQ additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 51 (simple_expression)


state 98

   47 simple_expression: additive_expression LT additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 47 (simple_expression)


state 99

   48 simple_expression: additive_expression LTEQ additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 48 (simple_expression)


state 100

   49 simple_expression: additive_expression GT additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 49 (simple_expression)


state 101

   50 simple_expression: additive_expression GTEQ additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 50 (simple_expression)


state 102

   52 simple_expression: additive_expression NEQ additive_expression .
   54 additive_expression: additive_expression . PLUS term
   55                    | additive_expression . MINUS term

    PLUS   shift, and go to state 83
    MINUS  shift, and go to state 84

    $default  reduce using rule 52 (simple_expression)


state 103

   54 additive_expression: additive_expression PLUS term .
   57 term: term . TIMES factor
   58     | term . OVER factor

    TIMES  shift, and go to state 85
    OVER   shift, and go to state 86

    $default  reduce using rule 54 (additive_expression)


state 104

   55 additive_expression: additive_expression MINUS term .
   57 term: term . TIMES factor
   58     | term . OVER factor

    TIMES  shift, and go to state 85
    OVER   shift, and go to state 86

    $default  reduce using rule 55 (additive_expression)


state 105

   57 term: term TIMES factor .

    $default  reduce using rule 57 (term)


state 106

   58 term: term OVER factor .

    $default  reduce using rule 58 (term)


state 107

   33 selection_stmt: IF LPAREN expression RPAREN . statement
   34               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 46
    ID      shift, and go to state 47
    NUM     shift, and go to state 48

    compound_stmt        go to state 49
    statement            go to state 113
    expression_stmt      go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 108

   35 iteration_stmt: WHILE LPAREN expression RPAREN . statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 46
    ID      shift, and go to state 47
    NUM     shift, and go to state 48

    compound_stmt        go to state 49
    statement            go to state 114
    expression_stmt      go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 109

   46 var: ID $@5 LSQ expression . RSQ

    RSQ  shift, and go to state 115


state 110

   69 arg_list: expression .

    $default  reduce using rule 69 (arg_list)


state 111

   65 call: ID $@6 LPAREN args . RPAREN

    RPAREN  shift, and go to state 116


state 112

   67 args: arg_list .
   68 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 117

    $default  reduce using rule 67 (args)


state 113

   33 selection_stmt: IF LPAREN expression RPAREN statement .
   34               | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 118

    ELSE      [reduce using rule 33 (selection_stmt)]
    $default  reduce using rule 33 (selection_stmt)


state 114

   35 iteration_stmt: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 35 (iteration_stmt)


state 115

   46 var: ID $@5 LSQ expression RSQ .

    $default  reduce using rule 46 (var)


state 116

   65 call: ID $@6 LPAREN args RPAREN .

    $default  reduce using rule 65 (call)


state 117

   68 arg_list: arg_list COMMA . expression

    LPAREN  shift, and go to state 44
    ID      shift, and go to state 66
    NUM     shift, and go to state 48

    expression           go to state 119
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 118

   34 selection_stmt: IF LPAREN expression RPAREN statement ELSE . statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    LPAREN  shift, and go to state 44
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 46
    ID      shift, and go to state 47
    NUM     shift, and go to state 48

    compound_stmt        go to state 49
    statement            go to state 120
    expression_stmt      go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    getNUM               go to state 62
    getID                go to state 63


state 119

   68 arg_list: arg_list COMMA expression .

    $default  reduce using rule 68 (arg_list)


state 120

   34 selection_stmt: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 34 (selection_stmt)
